<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <include
        android:id="@+id/header"
        android:layout_height="wrap_content"
        layout="@layout/include_header" />
    
    <Button
        android:id="@+id/btnSchedule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/header"
        android:layout_below="@+id/header"
        android:text="@string/main_schedule" />

    <Button
        android:id="@+id/btnReports"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnSchedule"
        android:layout_below="@+id/btnSchedule"
        android:text="@string/main_reporters" />    
    
    <Button
        android:id="@+id/btnReporters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnReports"
        android:layout_below="@+id/btnReports"
        android:text="@string/main_reports" />
    
    <Button
        android:id="@+id/btnAbout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnReporters"
        android:layout_below="@+id/btnReporters"
        android:text="@string/main_about" />
    
    <Button
        android:id="@+id/btnWebsite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnAbout"
        android:layout_below="@+id/btnAbout"
        android:text="@string/main_site" />    
</RelativeLayout>